# EnglishTurkishTranslation-CPP

./: .gitignore  CMakeLists.txt  README.md
SentenceAlignment/: SentenceAlignmentType.h
Translation/: ScoredSentence.cpp  ScoredSentence.h  SourceWord.cpp  SourceWord.h  TargetPhrase.cpp  TargetPhrase.h  TranslationType.h  WordAlignment.cpp  WordAlignment.h  WordMeaning.cpp  WordMeaning.h  WordTranslationCandidate.cpp  WordTranslationCandidate.h  WordTranslations.cpp  WordTranslations.h
